fixed modal display issues and text alignments.

--- a/app/javascript/snap/styles/components/_search-results.scss
+++ b/app/javascript/snap/styles/components/_search-results.scss
@@ -11,7 +11,7 @@
             bottom: auto !important;
             .card-title {
                 color: #fff;
-                padding: 24vh 24vw 0;
+                padding: 10vh 20vw 0;
                 font-size: 25px;
             }
         }
